test/Fail/Issue8596a.err
Issue8596a.agda:9.1-11.16: error: [TerminationIssue]
Termination checking failed for the following function:
  p
Problematic calls:
  p .snd
    (at Issue8596a.agda:10.10-11)
  p .fst
    (at Issue8596a.agda:11.10-11)
